infra/system/network_policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres-ip
  namespace: tuvarna
spec:
  podSelector:
    matchLabels:
      degree: phd
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: <VPN IP>/32
      ports:
        - protocol: TCP
          port: 5432

        - protocol: TCP
          port: 9200

        - protocol: TCP
          port: 9300
